--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -9,6 +9,11 @@
 
 <ion-content>
   <ion-grid>
+    <ion-row *ngIf="loadedBookings.length <= 0">
+      <ion-col size-md="6" offset-md="3">
+        You don't have any bookings
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col size-md="6" offset-md="3">
         <ion-list>
