--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,40 +1,49 @@
 <ion-app>
-  <ion-menu side="start">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>
-          PairBnB
-        </ion-title>
-      </ion-toolbar>
-    </ion-header>
+  <ion-split-pane contentId="menuRM">
+      <ion-menu side="start" contentId="menuRM">
+        <ion-header>
+          <ion-toolbar>
+            <ion-title>
+              Menu Title
+            </ion-title>
+          </ion-toolbar>
+        </ion-header>
 
-    <ion-content>
-      <ion-list>
-        <ion-menu-toggle>
-          <ion-item lines="none" routerLink="/places/tabs/discover">
-            <ion-label *ngIf="onlineChanges$ | async; else haha"> YES   </ion-label>
-            <ng-template #haha>
-              <ion-label>NO</ion-label>
-            </ng-template>
+        <ion-content>
+          <ion-list>
+            <ion-menu-toggle autoHide="false">
+              <ion-item lines="none" routerLink="/places/tabs/discover">
+                <ion-label *ngIf="onlineChanges$ | async; else haha"> YES   </ion-label>
+                <ng-template #haha>
+                  <ion-label>NO</ion-label>
+                </ng-template>
+                <ion-icon name="business" slot="start"></ion-icon>
+                <ion-label>Discover Places</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+            <ion-menu-toggle autoHide="false">
+              <ion-item lines="none" routerLink="/bookings">
+                <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+                <ion-label>Your Bookings</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+            <ion-menu-toggle autoHide="false">
+              <ion-item lines="none" (click)="onLogout()" button>
+                <ion-icon name="exit" slot="start"></ion-icon>
+                <ion-label>Logout</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+            <ion-menu-toggle autoHide="false">
+              <ion-item lines="none" routerLink="/testing-menu">
+                <ion-icon name="checkbox-outline" slot="start"></ion-icon>
+                <ion-label>Testing Menu on Another Page</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+          </ion-list>
+        </ion-content>
+      </ion-menu>
 
-            <ion-icon name="business" slot="start"></ion-icon>
-            <ion-label>Discover Places</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-        <ion-menu-toggle>
-          <ion-item lines="none" routerLink="/bookings">
-            <ion-icon name="checkbox-outline" slot="start"></ion-icon>
-            <ion-label>Your Bookings</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-        <ion-menu-toggle>
-          <ion-item lines="none" (click)="onLogout()" button>
-            <ion-icon name="exit" slot="start"></ion-icon>
-            <ion-label>Logout</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
-  <ion-router-outlet main></ion-router-outlet>
+      <ion-router-outlet id="menuRM"></ion-router-outlet>
+
+  </ion-split-pane>
 </ion-app>
