--- a/src/app/testing-menu/testing-menu.page.html
+++ b/src/app/testing-menu/testing-menu.page.html
@@ -1,30 +1,31 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Your Testing Page</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-md="6" offset-md="3">
-        <ion-list>
-      
-            <ion-item lines="none" routerLink="/bookings">
-              <ion-icon name="checkbox-outline" slot="start"></ion-icon>
-              <ion-label>Link 1</ion-label>
-            </ion-item>
-        
-            <ion-item lines="none" (click)="link2Clicked()" button>
-              <ion-icon name="exit" slot="start"></ion-icon>
-              <ion-label>Link 2</ion-label>
-            </ion-item>
-        
-        </ion-list>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</ion-content>
+        <ion-header>
+          <ion-toolbar>
+            <ion-buttons slot="start">
+              <ion-menu-button></ion-menu-button>
+            </ion-buttons>
+            <ion-title>
+              Testing Page
+            </ion-title>
+          </ion-toolbar>
+        </ion-header>
+
+        <ion-content>
+          <ion-list>            
+              <ion-item lines="none" (click)="link2Clicked($event)" button>
+                <ion-label>Page Summary</ion-label>
+              </ion-item>      
+              <ion-item lines="none" routerLink="/bookings">
+               
+                <ion-label>Page Details</ion-label>
+              </ion-item>
+          </ion-list>
+        </ion-content>
+
+        <ion-footer>
+          <ion-toolbar>
+            <ion-title>
+              Footer
+            </ion-title>
+          </ion-toolbar>
+        </ion-footer>
