--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
         <ion-header>
           <ion-toolbar>
             <ion-title>
-              Menu Title
+              Menu Title - {{lastRunStamp}}
             </ion-title>
           </ion-toolbar>
         </ion-header>
